# genesis

./: .gitignore  CLAUDE.md  CODEBASE.md  GENESIS_FIRST_LIGHT.md  GENESIS_REDESIGN.md  README.md  genesis-design-vision.jsx  pyproject.toml
GOD/: Package.swift  bundle.sh
GOD/GOD/: ContentView+KeyHandlers.swift  ContentView.swift  GODApp.swift
GOD/Tests/: BPMDetectorTests.swift  BiquadTests.swift  EngineEventInterpreterTests.swift  GodCaptureTests.swift  GodEngineTests.swift  LLMManagerTests.swift  LayerTests.swift  MIDIRingBufferTests.swift  MIDITests.swift  MetronomeTests.swift  PadTests.swift  SpliceLoadingTests.swift  StateSnapshotTests.swift  SwingMathTests.swift  TipsTests.swift  TransportTests.swift  VoiceTests.swift
Genesis/: Package.swift
Genesis/Genesis/: ContentView+KeyHandlers.swift  ContentView.swift  GenesisApp.swift
Genesis/Tests/: BPMDetectorTests.swift  BiquadTests.swift  EngineEventInterpreterTests.swift  GenesisCaptureTests.swift  GenesisEngineTests.swift  LayerTests.swift  MIDIRingBufferTests.swift  MIDITests.swift  MetronomeTests.swift  PadTests.swift  SignalClipTests.swift  SpliceLoadingTests.swift  StressTests.swift  SwingMathTests.swift  TransportTests.swift  VoiceTests.swift
docs/plans/: 2026-03-08-god-v1-design.md  2026-03-08-god-v1-implementation.md  (+6 more)
tests/: test_audio.py  test_capture.py  test_engine.py  test_metronome.py  test_midi.py  test_pads.py  test_patterns.py  test_placeholder.py  test_samples.py  test_save.py  test_transport.py
tools/: com.genesis.splicesorter.plist  com.god.splicesorter.plist  splice_sorter.py
(+124 files in other folders)
