[project]
name = "god"
version = "0.1.0"
description = "Genesis On Disk — terminal loop-stacking instrument"
requires-python = ">=3.12"
dependencies = [
    "textual>=0.50.0",
    "mido>=1.3.0",
    "python-rtmidi>=1.5.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
god = "god.main:run"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
